Fix layout bug.

--- a/solution/main.css
+++ b/solution/main.css
@@ -55,7 +55,7 @@ nav > .content,
 header > .content,
 section > .content,
 footer > .content,
-main > .content {
+main {
   padding-left: 1rem;
   padding-right: 1rem;
 }
